# ToM-SWE

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  EXPERIMENT_LOG.md  OPENHANDS_INTEGRATION_REPORT.md  RAG_AGENT_SUMMARY.md  README.md  RELEASE.md  REPOSITORY_STATUS.md  analyze_all_users.py  analyze_users.py  check_types.py  database.py  delete_old_db.py  example.json  example.py  mypy.ini  pyproject.toml  rag_example.py  test_llm_condensation.py  tom_agent_example.py
.github/ISSUE_TEMPLATE/: bug_report.md  issue_1.md
.github/workflows/: mypy.yml  pre-commit.yml  pytest.yml
.openhands/microagents/: repo.md
stateful_swe/: __init__.py  advanced_tom_analytics.py  analyze_tom_metrics.py  clarity_eval.py  dataset_builder.py  huggingface_dataset_builder.py  multi_model_clarity_eval.py  parallel_multi_model_eval.py  profile_generator.py  run_model_comparison.py  session_washer.py  sleeptime_process.py  visualize_model_results.py
templates/: base.html  conversation.html  conversations.html  error.html  index.html
test_typing/: test_analyzer.py  test_utils.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_action.py  test_analyzer.py  test_api.py  test_api_instruction_improvement.py  test_code_metrics.py  test_core.py  test_data_utils.py  test_database.py  test_instruction_improvement.py  test_process_and_save_steps.py  test_prompts.py  test_tom_agent.py  test_tom_module.py  test_utils.py  test_visualization.py
tom_module/: README.md  __init__.py  analyzer.py  code_explainer.py  database.py  intent_predictor.py  rag_requirements.txt  tom_module.py
tom_swe/: README.md  __init__.py  core.py  database.py  logging_config.py  rag_module.py  tom_agent.py  tom_module.py  utils.py
tom_swe/api/: README.md  __init__.py  example_client.py  main.py  models.py  server.py
tom_swe/generation/: __init__.py  action.py  dataclass.py  generate.py  output_parsers.py  prompts.py
tom_swe/generation_utils/: __init__.py  generate.py  output_parsers.py
tom_swe/memory/: __init__.py  conversation_processor.py  file_store.py  local.py  locations.py  store.py
tom_swe/prompts/: __init__.py  registry.py
tom_swe/prompts/templates/: give_suggestions.jinja2  propose_instructions.jinja2  user_analysis.jinja2
tom_swe/templates/: base.html  conversation.html  conversations.html  error.html  index.html
tom_swe/tests/: __init__.py  test_core.py
tom_swe/utils/: configure_llm.py
tom_swe/visualization/: display_trajectory.py  user_interaction_analysis.py  web_trajectory_viewer.py
utils/: __init__.py  aggregate_user_behavior.py  analyze_all_users.py  analyze_users.py  code_metrics.py  combine_events_to_trajectory.py  configure_llm.py  data_utils.py  llm_client.py  pull_google_cloud_data.py
visualization/: __init__.py  complexity_visualizer.py  display_trajectory.py  trajectory_viewer.py  user_behavior_visualizer.py  user_interaction_analysis.py  web_trajectory_viewer.py
