[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tom_swe"
version = "0.1.0"
description = "Theory of Mind for Software Engineering"
readme = "README.md"
authors = [
    {name = "OpenHands", email = "openhands@all-hands.dev"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "flask>=2.0.0",
    "openai>=1.0.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.910",
    "pre-commit>=2.17.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88