[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tom-swe"
version = "1.0.0"
description = "Theory of Mind modeling for Software Engineering assistants"
authors = [
    {name = "Research Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "json-repair>=0.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typing-extensions>=4.0.0",
    "tqdm>=4.65.0",
    "aiofiles>=23.0.0",
    # Template engine
    "jinja2>=3.0.0",
    # API dependencies
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    # BM25 search dependencies
    "bm25s>=0.2.0",
    "PyStemmer>=2.2.0",
    "tiktoken>=0.8.0",
    # HuggingFace dependencies
    "datasets>=2.0.0",
    "huggingface_hub>=0.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=6.2.1",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
tom-agent = "tom_swe.tom_agent:main"
tom-config = "tom_swe.utils.configure_llm:main"
rag-agent = "tom_swe.rag_module:main"
tom-api = "tom_swe.api.server:main"

[tool.hatch.build.targets.wheel]
packages = ["tom_swe"]
